se agregó un hola

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <h3 class="f2">b</h3>
             <h3 class="f2">c</h3>
             <h3 class="f2">d</h3>
+            <h3>hola</h3>
         </div>
      </header>
 
